use day 13 instead

--- a/index.html
+++ b/index.html
@@ -4,25 +4,61 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Document</title>
 		<link rel="stylesheet" href="css/styles.css" />
-		<link rel="stylesheet" href="https://100dayscss.com/codepen/css/font-awesome.min.css">
 		<script src="scripts.js" defer></script>
 	</head>
 
-	<!-- 我目前的 codepen: https://codepen.io/sunpochin/pen/zYVBYVJ   -->
-	<body>
-		<div class="frame">
-		  <div class="center">
-				<div class="quote">
-					<p>No one ever told me I was
-						<span onclick="void(0);" class="tooltip">pretty
-							<span class="info">
-								<span class="pronounce">[əbˈseʃ(ə)n] [ˈprɪt̬.i]<span class="fa fa-volume-up"></span></span>
-								<span class="text"><b>Pretty</b>, Attractive or pleasant in a delicate way.</span>
-							</span>
-						</span> when I was a little girl. All little girls should be told they're pretty, even if they aren't.</p>
-					<p class="author">Marylin Monroe</p>
-				</div>
-		  </div>
-		</div>
-	</body>
+
+  <div class="frame">
+    <div class="center">
+      <div class="all-profile">
+        <div class="profile">
+          <div class="button">+</div>
+          <img src="https://100dayscss.com/codepen/13-1.jpg" alt="" class="photo-profile" />
+        </div>
+        <div class="profile">
+          <div class="button">+</div>
+          <img src="https://100dayscss.com/codepen/13-2.jpg" alt="" class="photo-profile" />
+        </div>
+        <div class="profile">
+          <div class="button">+</div>
+          <img src="https://100dayscss.com/codepen/13-3.jpg" alt="" class="photo-profile" />
+        </div>
+        <div class="profile">
+          <div class="button">+</div>
+          <img src="https://100dayscss.com/codepen/13-4.jpg" alt="" class="photo-profile" />
+        </div>
+      </div>
+      <div class="background-image">
+        <img src="https://100dayscss.com/codepen/13-1-header.jpg" alt="">
+      </div>
+      <div class="photo">
+        <img src="https://100dayscss.com/codepen/13-1.jpg" alt="">
+      </div>
+      <div class="action-buttons">
+        <div class="profile-name"></div>
+        <div class="buttons">
+          <div class="action">
+            <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="bi bi-telephone-fill"
+              viewBox="0 0 16 16">
+              <path fill-rule="evenodd"
+                d="M1.885.511a1.745 1.745 0 0 1 2.61.163L6.29 2.98c.329.423.445.974.315 1.494l-.547 2.19a.68.68 0 0 0 .178.643l2.457 2.457a.68.68 0 0 0 .644.178l2.189-.547a1.75 1.75 0 0 1 1.494.315l2.306 1.794c.829.645.905 1.87.163 2.611l-1.034 1.034c-.74.74-1.846 1.065-2.877.702a18.6 18.6 0 0 1-7.01-4.42 18.6 18.6 0 0 1-4.42-7.009c-.362-1.03-.037-2.137.703-2.877z" />
+            </svg>
+          </div>
+          <div class="action">
+            <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="bi bi-chat-fill" viewBox="0 0 16 16">
+              <path
+                d="M8 15c4.418 0 8-3.134 8-7s-3.582-7-8-7-8 3.134-8 7c0 1.76.743 3.37 1.97 4.6-.097 1.016-.417 2.13-.771 2.966-.079.186.074.394.273.362 2.256-.37 3.597-.938 4.18-1.234A9 9 0 0 0 8 15" />
+            </svg>
+          </div>
+          <div class="action">
+            <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="bi bi-heart-fill" viewBox="0 0 16 16">
+              <path fill-rule="evenodd" d="M8 1.314C12.438-3.248 23.534 4.735 8 15-7.534 4.736 3.562-3.248 8 1.314" />
+            </svg>
+          </div>
+        </div>
+      </div>
+      <div class="close">×</div>
+    </div>
+  </div>
+
 </html>
